@@ -7,6 +7,8 @@ FBINTF Change Log  version          (1.4-4 Build 1235) Thu, 16 Jan 2025 09:41:10
    addref is no longer called after attach to existing database and hence release no
    longer called after detach or dropdatabase.
 
+3. Remove unnecessary addRef and Release in FB30Transaction.
+
 FBINTF Change Log  version          (1.4-3 Build 1233) Tue, 14 Jan 2025 14:47:27 +0000
 
 1. Time with Time Zone: when a ISQLParam is set to a variant value and the value is
